added variable to handle changing card color depending on task status

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -14,3 +14,15 @@ body {
 .task-card:hover {
   cursor: grab;
 }
+
+.red {
+  background-color: red;
+}
+
+.orange {
+  background-color: orange;
+}
+
+.green {
+  background-color: green;
+}
